--- a/public/test.html
+++ b/public/test.html
@@ -6,9 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <video widht="640" height="480"></video>
-    <div id="record">record</div>
-    <div id="stop">stop</div>
+    <video widht="640" height="480" autoplay></video>
+    <button id="record">record</button>
+    <button id="stop">stop</button>
     <script src="d.js"></script>
   </body>
 </html>
