Save before deprecate

--- a/public/test.html
+++ b/public/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <video widht="640" height="480" autoplay></video>
+    <video widht="640" height="480"></video>
     <button id="record">record</button>
     <button id="stop">stop</button>
     <script src="d.js"></script>
